# GUANACO

./: .brooks-lint-history.json  .gitignore  Dockerfile  INSTALL.md  README.md  example_config.json  pixi.toml  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  getting-started.rst  index.html  index.rst  marimo_guide.md  notebook_api.md
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  getting-started.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  getting-started.doctree  index.doctree
docs/_build/html/.doctrees/deployment/: configuring-json.doctree  index.doctree  installation.doctree  running-docker.doctree  running-python.doctree
docs/_build/html/.doctrees/source/: index.doctree
docs/_build/html/_sources/deployment/: configuring-json.rst.txt  installation.rst.txt  running-python.rst.txt
docs/_build/html/deployment/: configuring-json.html  index.html  installation.html  running-docker.html  running-python.html
docs/_build/html/source/: index.html
docs/deployment/: configuring-json.rst  index.rst  installation.rst  running-python.rst
docs/development/: colors.rst  continuous_colormaps.md  discrete_colormaps.md  expression_trend_plot.md  grn_plot.md  index.rst  paga_plot.md  volcano_plot.md
examples/configs/: cloud_zarr_config.json  cluster_1_cloud_zarr_peakbrowser.json  cluster_2_three_datasets.json  example_config.json  pbmc_atac_browser_test.json
examples/marimo/: guanaco_explorer.py  guanaco_panels.py  guanaco_template.py
examples/notebooks/: TACoWig_Template.ipynb
examples/widgets/: README.md  Widget_example.ipynb
guanaco/: app.py  cli.py  data_loader.py  main.py
guanaco/pages/matrix/: callbacks.py  layout.py
guanaco/pages/matrix/cellplotly/: dotmatrix.py  embedding.py  heatmap.py  violin1.py  violin2.py
motif_extraction/: README_motif_atac.md  motif_atac_intersect.sh
scripts/: build_desktop.sh  desktop_entry.py
src/: app.py  requirements.txt
src/guanaco/: __init__.py  app.py  cli.py  config_wizard.py  dash_app.py  data_loader.py  desktop.py  guanaco.json  layout.py  main.py  marimo.py  requirements.txt  share.py  walkthrough.md  widget.py
src/guanaco/assets/: scientific_style.css
src/guanaco/data/: DATA_LOADING.md  __init__.py  loader.py  registry.py
src/guanaco/layouts/: __init__.py  app_layout.py
src/guanaco/pages/matrix/: callbacks.py  layout.py
src/guanaco/pages/matrix/callback_modules/: __init__.py  dotplot_callbacks.py  heatmap_callbacks.py  pseudotime_callbacks.py  scatter_callbacks.py  stacked_bar_callbacks.py  violin_callbacks.py
src/guanaco/pages/matrix/callbacks/: __init__.py  atac_browser_callbacks.py  dotplot_callbacks.py  grn_demo_callbacks.py  guanaco.json  heatmap_callbacks.py  paga_callbacks.py  pseudotime_callbacks.py  register.py  scatter_callbacks.py  stacked_bar_callbacks.py  violin_callbacks.py  volcano_callbacks.py
src/guanaco/pages/matrix/cellplotly/: dotmatrix.py  embedding.py  heatmap.py  stacked_bar.py  violin1.py  violin2.py
src/guanaco/pages/matrix/layout_modules/: __init__.py  dotplot_layout.py  embedding_layout.py  heatmap_layout.py  pseudotime_layout.py  stacked_bar_layout.py  violin_layout.py
src/guanaco/pages/matrix/layouts/: __init__.py  atac_browser_layout.py  dotplot_layout.py  embedding_layout.py  grn_demo_layout.py  heatmap_layout.py  paga_layout.py  pseudotime_layout.py  stacked_bar_layout.py  violin_layout.py  volcano_layout.py
src/guanaco/pages/matrix/plots/: __init__.py  atac_browser.py  dotmatrix.py  embedding.py  gene_annotation.py  grn_demo.py  guanaco.json  heatmap.py  paga.py  pseudotime.py  stacked_bar.py  violin1.py  violin2.py  volcano.py
src/guanaco/pages/track/: callbacks.py  layout.py  utils.py
src/guanaco/utils/: __init__.py  colors.py  cvd_color.json  gene_extraction_utils.py  memory_utils.py  obs_utils.py  plot_config.py  progress_utils.py  render_guard.py  ui_helpers.py  volcano_utils.py
tests/: conftest.py  test_atac_browser.py  test_atac_browser_callbacks.py  test_dotmatrix.py  test_embedding.py  test_heatmap.py  test_loader.py  test_package.py  test_peak_browser.py  test_pseudotime.py  test_scatter_callbacks.py  test_share.py  test_violin1.py  test_violin2.py  test_widget_helpers.py
tests/grn_test/: paul15_grn_edges_top.csv
widgets/: README.md  Widget_example.ipynb
